resolve little bug in gallery on mobile

--- a/app/assets/stylesheets/img_gallery.scss
+++ b/app/assets/stylesheets/img_gallery.scss
@@ -70,7 +70,6 @@
 .mobile-gallery-wrapper .owl-item {
   aspect-ratio: 2 / 3;
   overflow: hidden;
-  width: unset !important;
 
   img {
     display: block;
